Fix c-home-header background: add wrapper, fix z-index and positioning

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2333,23 +2333,41 @@ body:has(.switch2porting-header) .container .content {
 .mb-10 { margin-bottom: 6rem; }
 
 /* Homepage styles */
+.c-home-header-wrapper {
+  position: relative;
+  width: 100%;
+  min-height: 360px;
+}
+
+@media (min-width: 992px) {
+  .c-home-header-wrapper {
+    min-height: 570px;
+  }
+}
+
 .c-home-header {
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   width: 100%;
-  background-position: right bottom;
+  height: 100%;
+  min-height: 360px;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   z-index: 0;
-  height: 360px;
 }
 
 @media (min-width: 992px) {
   .c-home-header {
-    height: 570px;
+    min-height: 570px;
   }
+}
+
+.c-home-header-wrapper > .container {
+  position: relative;
+  z-index: 1;
 }
 
 .c-separator {
